更新了zh目录下的文件，包括Makefile、intro.tex、latexmkrc等，以及媒体文件和yaii-style.sty，完善了手册内容。

--- a/zh/yaii-style.sty
+++ b/zh/yaii-style.sty
@@ -14,7 +14,7 @@
 \RequirePackage{tikz}
 
 \PassOptionsToPackage{no-math}{fontspec}
-\RequirePackage[scheme=chinese,heading=true,fontset=fandol]{ctex}
+\RequirePackage[heading=true,punct=CCT]{ctex}
 \RequirePackage{amssymb,latexsym,textcomp,mathrsfs,euscript,yhmath} % 与默认字体不冲突的一些符号包
 
 % hyperref 基本设定
