--- a/zh/yaii.tex
+++ b/zh/yaii.tex
@@ -7,7 +7,7 @@
 
 \frontmatter
 
-\include{intro}
+\include{0-introduction}
 
 \title{Yet Another Introduction to the Internet}
 \author{Yaii Project}
@@ -16,9 +16,7 @@
 
 \mainmatter
 
-\chapter{网络连接}
-
-\section{互联网发展历史}
+\include{1-connection}
 
 \appendix
 
@@ -26,3 +24,5 @@
 \printindex
 
 \end{document}
+
+\endinput
