--- a/zh/yaii-style.sty
+++ b/zh/yaii-style.sty
@@ -14,13 +14,18 @@
 \RequirePackage{tikz}
 
 \PassOptionsToPackage{no-math}{fontspec}
-\RequirePackage[heading=true,punct=CCT]{ctex}
+\RequirePackage[
+  heading=true,
+  punct=CCT
+  ]{ctex}
 \RequirePackage{amssymb,latexsym,textcomp,mathrsfs,euscript,yhmath} % 与默认字体不冲突的一些符号包
 
 % hyperref 基本设定
 \RequirePackage{hyperref}
 \hypersetup{colorlinks,%
   bookmarksnumbered=true,%
-  pdfstartview=FitH}
+  pdfstartview=FitH,%
+  pdftitle=Yet Another Introduction to the Internet,%
+  pdfauthor=NWater}
 
 \endinput
