--- a/zh/yaii.tex
+++ b/zh/yaii.tex
@@ -13,12 +13,16 @@
 \author{Yaii Project}
 \date{\today}
 \maketitle
+\include{copyright}
+\tableofcontents
 
 \mainmatter
 
 \include{1-connection}
 
 \appendix
+
+\include{fdl-1.3}
 
 \backmatter
 \printindex
