--- a/copyright.tex
+++ b/copyright.tex
@@ -1,6 +1,6 @@
 \newpage\thispagestyle{empty}
 \begin{quote}\footnotesize
-    Copyright \copyright{} {\the\year} NWater <\href{mailto:nwater23@outlook.com}{nwater23@outlook.com}>. \\
+    Copyright \copyright{} {\the\year} Yaii-Project Org. \\
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.3
     or any later version published by the Free Software Foundation;
