--- a/copyright.tex
+++ b/copyright.tex
@@ -1,17 +1,26 @@
 \newpage\thispagestyle{empty}
 \begin{quote}\footnotesize
-    Copyright \copyright{} {\the\year} Yaii-Project Org. \\
-    Permission is granted to copy, distribute and/or modify this document
-    under the terms of the GNU Free Documentation License, Version 1.3
-    or any later version published by the Free Software Foundation;
-    with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
-    A copy of the license is included in the section entitled ``\hyperref[label_fdl]{GNU
-    Free Documentation License}''.
-\end{quote}
+SPDX-License-Identifier: GPL-3.0-or-later OR GFDL-1.3-or-later OR CC-BY-SA-4.0
 
-\begin{quote}\footnotesize
-    Permission is granted to copy, distribute and/or modify this document
-    under the terms of the Creative Commons Attribution-ShareAlike 4.0 International. To view a copy of this license, visit \url{https://creativecommons.org/licenses/by-sa/4.0/}
+Copyright \copyright{} {\the\year} Yaii-Project Org. \\
+The program used to generating Yaii Manual PDF files, is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. \\
+This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. \\
+You should have received a copy of the GNU General Public License along with this program. If not, see \url{https://www.gnu.org/licenses/}.
+
+The document is the text and image content of Yaii Manual, you may have a PDF file or a paper copy of it. The document source file (.tex) is also a part of the program mentioned above.
+
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3
+or any later version published by the Free Software Foundation;
+with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+A copy of the license is included in the section entitled ``\hyperref[label_fdl]{GNU
+Free Documentation License}''.
+
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the Creative Commons Attribution-ShareAlike 4.0 International. To view a copy of this license, visit \url{https://creativecommons.org/licenses/by-sa/4.0/}
+
+Contributors: \\
+NWater<\href{mailto:nwater23@outlook.com}{nwater23@outlook.com}>
 \end{quote}
 
 \endinput
