提交说明：更新了zh目录下的文件，包括Makefile、intro.tex、latexmkrc等，以及媒体文件和yaii-style.sty，完善了手册内容。

--- a/copyright.tex
+++ b/copyright.tex
@@ -21,6 +21,9 @@ under the terms of the Creative Commons Attribution-ShareAlike 4.0 International
 
 Contributors: \\
 NWater<\href{mailto:nwater23@outlook.com}{nwater23@outlook.com}>
-\end{quote}
 
+References: \\
+The generating script \verb|Makefile|, \verb|latexmkrc|, \verb|yaii-style.sty| (\verb|lshort-zh-cn-style.sty|) and the license text in \TeX{} format of FDL (v1.3) are reference to the \href{https://ctan.org/pkg/lshort-zh-cn}{The Not So Short Introduction To \LaTeXe (Chinese Edition)}'s source code.
+
+\end{quote}
 \endinput
