--- a/zh/0-introduction.tex
+++ b/zh/0-introduction.tex
@@ -8,7 +8,7 @@
 
 您的电脑桌面\footnote{入门章节提供的教程专门面向使用电脑设备的Windows用户, 如果您正在使用手机、平板等移动设备, 您可能需要适用于Android (安卓) 、iOS、iPadOS、鸿蒙系统的教程, 请参阅本手册后文的对应章节. }上可能有这样一个图标: 
 \includegraphics[width=0.6in]{media/Internet_Explorer_4_and_5_logo.png}
-\footnote{该Internet Explorer标志来源于 \url{https://commons.wikimedia.org/wiki/File:Internet_Explorer_4_and_5_logo.svg}, Credit by Microsoft, Public domain, via Wikimedia Commons}
+\footcite[该Internet Explorer标志来源于 \url{https://commons.wikimedia.org/wiki/File:Internet_Explorer_4_and_5_logo.svg}, Credit by Microsoft, Public domain, via Wikimedia Commons]{IE}
 
 它 (Internet
 Explorer, IE浏览器) 是微软开发的一款网页浏览器, 它很旧, 即便是IE11也已经结束了它的生命周期\footnote{这意味着您永远都不会接收到关于它的更新了. 但是最主要的一点是随操作系统附带的IE版本太旧, 无法支持比较新的TLS标准, 这会导致您访问一些网站时被提示安全证书无效. }. 
