--- a/zh/yaii-style.sty
+++ b/zh/yaii-style.sty
@@ -20,6 +20,11 @@
   ]{ctex}
 \RequirePackage{amssymb,latexsym,textcomp,mathrsfs,euscript,yhmath} % 与默认字体不冲突的一些符号包
 
+\RequirePackage[
+  style=gb7714-2015
+]{biblatex}
+\addbibresource{yaii.bib}
+
 % hyperref 基本设定
 \RequirePackage{hyperref}
 \hypersetup{colorlinks,%
