提交说明：更新了zh目录下的文件，包括Makefile、intro.tex、latexmkrc等，以及媒体文件和yaii-style.sty，完善了手册内容。

--- a/copyright.tex
+++ b/copyright.tex
@@ -7,6 +7,8 @@ The program used to generating Yaii Manual PDF files, is free software: you can 
 This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. \\
 You should have received a copy of the GNU General Public License along with this program. If not, see \url{https://www.gnu.org/licenses/}.
 
+You can download program source code from web: \url{https://github.com/yaii-project/yaii-manual}
+
 The document is the text and image content of Yaii Manual, you may have a PDF file or a paper copy of it. The document source file (.tex) is also a part of the program mentioned above.
 
 Permission is granted to copy, distribute and/or modify this document
