--- a/yaii.bib
+++ b/yaii.bib
@@ -1,7 +1,44 @@
-@online{IE,
- author  = "Rezonansowy",
- title   = "Internet Explorer 4 and 5 logo.svg",
- year    = "2013",
- url     = "https://commons.wikimedia.org/wiki/File:Internet_Explorer_4_and_5_logo.svg",
- note    = "File: \ttfamily{Internet Explorer 4 and 5 logo.svg}",
+@image{IE,
+ author  = {Microsoft},
+ title   = {Internet Explorer 4 and 5 logo.svg},
+ year    = {1996},
+ urldate = {2013},
+ url     = {https://commons.wikimedia.org/wiki/File:Internet_Explorer_4_and_5_logo.svg},
+ note    = {Microsoft, Public domain, via Wikimedia Commons},
+}
+
+@image{MSEdge,
+ author  = {Microsoft},
+ title   = {Microsoft Edge browser logo used since 2019},
+ year    = {2019},
+ urldate = {2023},
+ url     = {https://commons.wikimedia.org/wiki/File:Edge_Logo_2019.svg},
+ note    = {Microsoft Corporation, CC BY-SA 4.0, via Wikimedia Commons},
+}
+
+@image{EthernetCableBlue2,
+ author  = {Raysonho},
+ title   = {Blue ethernet cable},
+ year    = {2015},
+ urldate = {2015},
+ url     = {https://commons.wikimedia.org/wiki/File:EthernetCableBlue2.jpg},
+ note    = {Raysonho @ Open Grid Scheduler / Grid Engine, CC0, via Wikimedia Commons},
+}
+
+@image{OpticalFiberConnector,
+ author  = {Adamantios},
+ title   = {SC optical fiber connector},
+ year    = {2008},
+ urldate = {2008},
+ url     = {https://commons.wikimedia.org/wiki/File:EthernetCableBlue2.jpg},
+ note    = {Adamantios, CC BY-SA 3.0, via Wikimedia Commons},
+}
+
+@image{EthernetPlugGrey,
+ author  = {Elembis},
+ title   = { Ethernet plug (8P8C) with a grey cable and boot. Pin 1 is to the right.},
+ year    = {2007},
+ urldate = {2010},
+ url     = {https://commons.wikimedia.org/wiki/File:Ethernet_plug_grey.svg},
+ note    = {Elembis, CC BY-SA-3.0 or FDL-1.2-or-later, via Wikimedia Commons},
 }
