--- a/zh/yaii-style.sty
+++ b/zh/yaii-style.sty
@@ -7,11 +7,12 @@
 \RequirePackage{hologo,verbatim,fancyvrb,layout,multicol}
 \RequirePackage[normalem]{ulem}
 \RequirePackage{colortbl,tabularx,multirow,makecell,booktabs}
-\RequirePackage{graphicx,xcolor,float,subcaption}
+\RequirePackage{graphicx,xcolor,float,subcaption,shadow}
 \RequirePackage{svg}
 \RequirePackage{makeidx}
 \RequirePackage[inner=1in,outer=1.5in,vmargin=1in,marginparwidth=1in]{geometry}
 \RequirePackage{tikz}
+\RequirePackage{xparse}
 
 \PassOptionsToPackage{no-math}{fontspec}
 \RequirePackage[
@@ -20,10 +21,56 @@
   ]{ctex}
 \RequirePackage{amssymb,latexsym,textcomp,mathrsfs,euscript,yhmath} % 与默认字体不冲突的一些符号包
 
+% 文献管理
 \RequirePackage[
-  style=gb7714-2015
+  style=gb7714-2015,
+  backref=true
 ]{biblatex}
 \addbibresource{yaii.bib}
+
+%开启引用跟踪计数器，为使用\ifciteseen等测试命令
+\ExecuteBibliographyOptions{citetracker=true}
+
+%判断当前文献是否已经引用过且是做的footfullcite(即已经作为脚注输出文献内容)
+%记录首次输出时的脚注号码，用于后面再次引用该文献时的输出，比如同(4)。
+%v1.0q 20190309 区分使脚注标注适应minipage中的情况
+\newbibmacro*{citesavefn}{%
+    \printtext[labelnumberwidth]{%
+      \printfield{prefixnumber}%
+      \printfield{labelnumber}}%
+    \addspace
+    \ifciteseen%当被引用过为true
+    {\ifcsdef{sec\arabic{refsection}\arabic{page}et\thefield{entrykey}}%当已经定义过脚注序号信息
+        {\csgdef{labelsec\arabic{refsection}\arabic{page}et\thefield{entrykey}}{%
+\str@sameentry\gdef\@thefnmark{\csuse{sec\arabic{refsection}\arabic{page}et\thefield{entrykey}}}%
+\@makefnmark%
+        }}%
+        {\csxdef{sec\arabic{refsection}\arabic{page}et\thefield{entrykey}}{%
+        \ifcsstring{@mpfn}{mpfootnote}{\@alph\c@mpfootnote}{\thefootnote}%
+        }}%
+    }%
+    {\csxdef{sec\arabic{refsection}\arabic{page}et\thefield{entrykey}}{%
+    \ifcsstring{@mpfn}{mpfootnote}{\@alph\c@mpfootnote}{\thefootnote}%
+    %判断在minipage中比较麻烦，这里使用\@mpfn的定义进行判断
+    }}%
+}
+
+%重定义\footfullcite使完成gb7714-2015的脚注文献要求
+\DeclareCiteCommand{\footfullcite}[\mkbibfootnotetext]%
+  {\defcounter{maxnames}{\blx@maxbibnames}%局部定义maxnames和minnames计数器
+    \defcounter{minnames}{\blx@minbibnames}%使footfullcite内的作者输出与正文文献表中的一致。
+    \usebibmacro{prenote}%
+    \renewbibmacro*{postnote}{%
+        \iffieldundef{postnote}%
+        {}{\setunit{\addcolon\addspace}\printfield{postnote}}}%与ay样式不同，由于已修改postnote域格式，直接用printfield
+    }%
+  {\usebibmacro{citesavefn}%
+      \ifcsdef{labelsec\arabic{refsection}\arabic{page}et\thefield{entrykey}}%
+      {\csuse{labelsec\arabic{refsection}\arabic{page}et\thefield{entrykey}}}%\nopunct
+      {\usedriver{\DeclareNameAlias{sortname}{default}}{\thefield{entrytype}}}%
+  }%
+  {\multicitedelim}%
+  {\usebibmacro{postnote}}
 
 % hyperref 基本设定
 \RequirePackage{hyperref}
@@ -31,6 +78,15 @@
   bookmarksnumbered=true,%
   pdfstartview=FitH,%
   pdftitle=Yet Another Introduction to the Internet,%
-  pdfauthor=NWater}
+  pdfauthor=Yaii Project}
+
+% \newcommand{\fakebutton}[1]{%
+%   \fcolorbox{gray}{lightgray!10}{#1}
+% }
+\NewDocumentCommand\fakebutton{O{lightgray!10}O{gray}m}{%
+  \addspace%
+  \fcolorbox{#2}{#1}{\textbf{#3}}%
+  \addspace%
+}
 
 \endinput
